--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+   <h1>sao paulo</h1>
+    <p>melhor time do brasil</p>
 </body>
 </html>
