--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-   <h1> Faz o L</h1>
-    <p> De Loud </p>
+   <h1> O Multiverso </h1>
+    <p> é um termo que os cientistas usam para descrever a ideia de que além do universo observável, outros universos também podem existir.</p>
 </body>
 </html>
