--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 </head>
 <body>
-   <h1> O Multiverso</h1>
-    <p> é um termo que os cientistas usam para descrever a ideia de que além do universo <strong>observável</strong>, outros universos também podem existir.</p>
-</body>
-</html>
+   <head class="cabecalho">
+    <h1> 2º sérieA </h1>
+    <P> A turma mais 
+ <strong> icÔnica </strong> do cecília</P>
+    </header>
