--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
    <head class="cabecalho">
     <h1> 2º sérieA </h1>
     <P> A turma mais 
- <strong> icÔnica </strong> do cecília</P>
+ <strong> ICÔNICA </strong> do cecília</P>
     </header>
